--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 blinker==1.6.2
 click==8.1.6
 colorama==0.4.6
-Flask==2.3.2
+Flask
 gunicorn==21.2.0
 importlib-metadata==6.8.0
 itsdangerous==2.1.2
@@ -10,4 +10,3 @@ MarkupSafe==2.1.3
 packaging==23.1
 werkzeug==2.3.7
 zipp==3.16.2
-
