--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ click==8.1.6
 colorama==0.4.6
 Flask
 gunicorn==21.2.0
-importlib-metadata==6.8.0
+importlib-metadata
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
